fix: update z-index in launcher styles build: 2.5.17

--- a/src/widgets/copilot/components/launcher/launcher.scss
+++ b/src/widgets/copilot/components/launcher/launcher.scss
@@ -1,5 +1,4 @@
 .gooeyChat-launchButton {
   border: none;
   overflow: hidden;
-  z-index: 1000;
 }
